<resources>
    <string name="app_name">MyServiceApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="choose_service">Choose the service you want to start</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="bound">Bound</string>
    <string name="bound_action">Bound: Random Int</string>
    <string name="notification_title">Foreground Service Title</string>
    <string name="notification_message">Services are very cool</string>
    <string name="ticker_text">Hello</string>
</resources>