<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_service"
        app:layout_constraintBottom_toTopOf="@id/button_StartBackgroundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_StartBackgroundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:text="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_StartForegroundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreground"
        app:layout_constraintBottom_toTopOf="@+id/button_StartBackgroundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_StartBoundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bound"
        app:layout_constraintBottom_toTopOf="@+id/button_StartBackgroundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_StartForegroundService"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/button_boundAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bound_action"
        app:layout_constraintBottom_toTopOf="@+id/button_StartBackgroundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_StartForegroundService"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>